k8s/grafana/05_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
