k8s/grafana/06_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.keindev.ru`)
      priority: 10
      services:
        - name: grafana-service
          namespace: grafana
          port: 3000
  tls:
    secretName: local-keindev-ru-tls
